# quantum-devops-ci

./: .babelrc  .editorconfig  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  .prettierrc.json  .secrets.baseline  .yamllint.yml  ARCHITECTURE.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_ENHANCED_FINAL_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_WORKAROUND.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  FINAL_IMPLEMENTATION_REPORT.md  GENERATION_1_SUMMARY.md  GENERATION_2_SUMMARY.md  GENERATION_4_RESEARCH_REPORT.md  GENERATION_5_AUTONOMOUS_EXECUTION_REPORT.md  IMPLEMENTATION_ROADMAP.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_GUIDE.md  PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION_REPORT.md  PROJECT_CHARTER.md  README.md  SECURITY.md  (+31 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: quantum-ci.yml  quantum-deployment.yml
.terragon/: config.yaml
coverage/: cobertura-coverage.xml  index.html
coverage/lcov-report/: index.html
deployment/: production-deployment.yml
deployment/manifests/production/: deployment.yaml  service.yaml
deployment/manifests/staging/: deployment.yaml  service.yaml
deployment_results/: production_deployment_report.json
docs/: ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-quantum-framework-abstraction.md  template.md
docs/guides/: developer-guide.md  user-guide.md
docs/monitoring/: README.md
docs/runbooks/: README.md
docs/tutorials/: 01_getting_started.md
docs/workflows/: README.md  WORKFLOW_SETUP.md  ci.yml
docs/workflows/examples/: cd.yml  ci.yml  quantum-ci.yml  security-scan.yml
examples/: circuits.py  progressive_quality_gates_demo.py  quantum_performance_demo.py  resilient_pipeline_demo.py
examples/advanced/: cost_optimization_example.py  generation2_demo.py
examples/basic/: core_test.py  demo.js  minimal_test.py  quantum_test_demo.py  simple_circuit_test.py  simple_quantum_integration_test.py  simple_quantum_test.py  simple_working_example.py  working_example.py
examples/frameworks/: qiskit_example.py
performance_results/: performance_optimization_report.json
quality_results/: quality_assessment_report.json
quantum-tests/: __init__.py  conftest.py
quantum-tests/benchmarks/: test_performance_benchmarks.py
quantum-tests/examples/: test_quantum_algorithms.py
quantum-tests/fixtures/: quantum_circuits.py
quantum-tests/integration/: test_end_to_end_workflows.py
quantum-tests/unit/: test_framework_adapters.py
quantum_devops/: __init__.py  ci_template.py  circuit.py  resources.py  simulator.py  testing.py
research_results/: adaptive_circuit_optimization_report.md  consolidated_research_results.json  hybrid_error_correction_report.md  ml_enhanced_scheduling_report.md  research_demo_report.json
scripts/automation/: metrics-collection.py
src/: cli.js
src/quality_results/: quality_assessment_report.json
src/quantum_devops_ci/: __init__.py  adaptive_load_balancer.py  advanced_validation.py  autoscaling.py  caching.py  cli.py  cli_enhanced.py  compliance.py  comprehensive_quality_gates.py  concurrency.py  cost.py  deployment.py  deployment_broken.py  enhanced_resilience.py  enhanced_security.py  enhanced_testing.py  exceptions.py  generation_1_enhanced.py  generation_2_enhanced.py  generation_3_enhanced.py  generation_4_core.py  generation_5_breakthrough.py  generation_6_transcendence.py  global_quantum_platform.py  health.py  high_performance_execution.py  high_performance_quantum.py  internationalization.py  linting.py  ml_optimization.py  monitoring.py  multi_cloud_quantum_networks.py  plugins.py  predictive_analytics.py  production_deployment.py  progressive_quality_gates.py  providers.py  pytest_plugin.py  quantum_error_correction.py  quantum_fixtures.py  (+12 more)
src/quantum_devops_ci/api/: __init__.py  app.py  middleware.py  routes.py  schemas.py
src/quantum_devops_ci/database/: __init__.py  cache.py  cli.py  connection.py  connection_broken.py  migrations.py  models.py  models_broken.py  repositories.py
src/quantum_devops_ci/locales/: en.json
templates/configs/: quantum.config.yml
templates/devcontainer/: devcontainer.json
templates/github-workflows/: quantum-ci.yml
tests/: conftest.py  setup.js  test_caching.py  test_ci_template.py  test_circuit.py  test_resources.py  test_security.py  test_simulator.py  test_testing.py  test_validation.py
tests/__mocks__/: inquirer.js
tests/integration/: workflow.test.js
tests/unit/: cli.test.js  test_cost_optimization.py  test_deployment.py  test_linting.py  test_monitoring.py  test_scheduling.py  test_testing_framework.py
